--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
     IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
     to match your app's package name + ".permission.C2D_MESSAGE".
     -->
-    <permission android:protectionLevel="signature"
-        android:name="com.parse.starter.permission.C2D_MESSAGE" />
-    <uses-permission android:name="com.parse.starter.permission.C2D_MESSAGE" />
+    <permission
+        android:name="com.tricloudcommunications.ce.instagramclone.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
 
+    <uses-permission android:name="com.tricloudcommunications.ce.instagramclone.permission.C2D_MESSAGE" />
 
     <application
         android:name=".StarterApplication"
@@ -40,10 +41,10 @@
             </intent-filter>
         </activity>
 
-
-
         <service android:name="com.parse.PushService" />
-        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
+
+        <receiver
+            android:name="com.parse.ParsePushBroadcastReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
@@ -51,31 +52,31 @@
                 <action android:name="com.parse.push.intent.OPEN" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.parse.GcmBroadcastReceiver"
+        <receiver
+            android:name="com.parse.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <!--
-                IMPORTANT: Change "com.parse.starter" to match your app's package name.
-                -->
+                <!--                 IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="com.tricloudcommunications.ce.instagramclone" />
             </intent-filter>
         </receiver>
 
-        <!--
-        IMPORTANT: Change "YOUR_SENDER_ID" to your GCM Sender Id.
-        -->
-        <meta-data android:name="com.parse.push.gcm_sender_id"
-            android:value="id:845928017685" />;
+        <!--         IMPORTANT: Change "YOUR_SENDER_ID" to your GCM Sender Id. -->
+        <meta-data
+            android:name="com.parse.push.gcm_sender_id"
+            android:value="id:845928017685" />
+        ;
+        <meta-data
+            android:name="com.parse.push.notification_icon"
+            android:resource="@drawable/ic_cast_dark" />
 
-        <meta-data android:name="com.parse.push.notification_icon"
-            android:resource="@drawable/ic_cast_dark"/>
-
-
-
-
+        <activity
+            android:name=".HomeViewActivity"
+            android:label="@string/title_activity_home_view"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
